log
Thu 09 Mar 2023 03:47:56 PM UTC: 
 tests:  0|7
total_score: 0/70
06b5c26
Thu 09 Mar 2023 03:55:36 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   17 |   int numero = *a
      |                ~~
      |                |
      |                int
   18 |   *b = *a
      |   ^
exercises.c:19:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   18 |   *b = *a
      |        ~~
      |        |
      |        int
   19 |   *a = numero
      |   ^
exercises.c:21:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   21 | }
      | ^
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
4e4d86f
